--- a/style.css
+++ b/style.css
@@ -1,54 +1,85 @@
 * {
   margin: 0;
   padding: 0;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 /* logo Section */
+#left {
+  display: flex;
+  align-items: center;
+}
+
+#left > img {
+  height: 4rem;
+  margin-right: 2rem;
+}
+
 #logo {
   display: flex;
-  background-color: rgb(215, 46, 46);
-  color: white;
   justify-content: space-between;
   align-items: center;
-  padding: 2rem 1rem;
+  padding: 1rem 0;
 }
-
-#right > button {
-  background-color: rgb(215, 46, 46);
-  color: white;
-  margin-left: 0.5rem;
-  border: none;
-  font-size: 1.2rem;
-  cursor: pointer;
-}
-
-/* Search Section */
 
 #search {
   display: flex;
-  justify-content: center;
-  background-color: rgb(197, 188, 188);
-  padding: 1.5rem 0;
-  align-items: center;
-}
-
-#search button {
-  background-color: rgb(215, 46, 46);
-  color: white;
-  font-size: 1rem;
-  border-radius: 10px;
-  margin-left: 0.5rem;
-  padding: 0.5rem;
-  cursor: pointer;
+  width: 600px;
+  height: 0.8rem;
+  border: 1px solid rgb(238, 227, 227);
+  border-radius: 5px;
+  padding: 0.7rem;
 }
 
 input {
-  width: 400px;
-  max-width: 60%;
-  border-color: dodgerblue;
-  border-radius: 10px;
+  max-width: 50%;
+  border: none;
   font-size: 1rem;
   padding: 0.5rem;
+  width: 350px;
+}
+
+i {
+  color: gray;
+}
+#right > #sign {
+  background-color: rgb(236, 82, 82);
+  color: white;
+  border-radius: 5px;
+  padding: 0.4rem;
+  margin-left: 0.5rem;
+  border: none;
+  cursor: pointer;
+  margin-left: 2rem;
+}
+
+#location {
+  width: 100px;
+}
+
+main {
+  background-color: rgb(250, 247, 247);
+}
+
+#navigation button {
+  font-size: 1rem;
+  background-color: rgb(250, 247, 247);
+  border: none;
+  padding: 0.8rem 0.4rem;
+}
+
+nav {
+  margin-bottom: 2rem;
+  border-bottom: 1px solid rgb(238, 227, 227);
+}
+
+#navigation {
+  display: flex;
+  justify-content: space-between;
+}
+
+#second > button {
+  font-size: smaller;
 }
 
 /* Banner Section */
@@ -70,35 +101,21 @@ input {
 /* Alternatively */
 #banner {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background-image: url(./Assets/Images/mover.jpg);
-  padding: 1.5rem 0;
+  overflow: scroll;
+  background-color: rgb(241, 236, 236);
 }
 
-#banner > h2 {
-  font-size: 1.5rem;
-  background-color: black;
-  color: white;
-  margin-bottom: 1rem;
-}
-
-#banner > button {
-  background-color: rgb(215, 46, 46);
-  color: white;
-  font-size: 1.5rem;
-  cursor: pointer;
-  padding: 0.5rem;
-  border-radius: 10px;
+#banner > img {
+  height: 14rem;
+  padding: 10px 5px;
+  border-radius: 20px;
 }
 
 /* Title Section */
 
 #content_title {
-  font-size: 2rem;
-  text-align: center;
-  padding: 1.2rem 0;
+  margin-top: 2rem;
+  font-size: 1.2rem;
 }
 
 /* Cards Section */
@@ -107,21 +124,31 @@ input {
   margin-right: 1rem;
   background-color: rgb(241, 236, 236);
   border-radius: 5px;
-  text-align: center;
 }
 
-.img {
+.card > .img {
   height: 350px;
   border-radius: 10px;
 }
 
+.card1 {
+  padding: 0.75rem;
+  margin-right: 1rem;
+  background-color: rgb(241, 236, 236);
+  border-radius: 5px;
+}
+
+.card1 > .img {
+  height: 200px;
+  border-radius: 10px;
+}
 .movie {
   display: flex;
   overflow-x: scroll;
 }
 
 .card > h3 {
-  font-size: 2rem;
+  font-size: 1.5rem;
 }
 
 .last {
@@ -129,12 +156,12 @@ input {
 }
 
 #bottom {
-  margin-top: 2rem;
+  margin: 4rem 0;
   text-align: center;
 }
 
 #bottom > img {
-  max-width: 80%;
+  max-width: 100vw;
 }
 
 @media (max-width: 600px) {
