--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ nav {
 }
 
 #banner > img {
-  height: 14rem;
+  height: 16rem;
   padding: 10px 5px;
   border-radius: 20px;
 }
@@ -155,13 +155,37 @@ nav {
   margin-right: 0;
 }
 
-#bottom {
+.bottom {
   margin: 4rem 0;
   text-align: center;
 }
 
-#bottom > img {
-  max-width: 100vw;
+.bottom > img {
+  max-width: 80%;
+}
+
+.premier {
+  margin: 2rem 0;
+  display: flex;
+  align-items: center;
+}
+
+.premier > img {
+  height: 5rem;
+  margin-right: 10px;
+}
+
+#pre {
+  background-color: rgb(55, 55, 95);
+  color: white;
+}
+
+#pre .card {
+  background-color: rgb(19, 19, 48);
+}
+
+.description {
+  margin: 0.5rem 0;
 }
 
 @media (max-width: 600px) {
