--- a/style.css
+++ b/style.css
@@ -188,29 +188,57 @@ nav {
   margin: 0.5rem 0;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 1000px) {
+  * {
+    margin: 0;
+    padding: 0;
+  }
   #logo {
     flex-direction: column;
-    padding: 1rem;
   }
   #right > button {
-    margin-top: 0.5rem;
+    margin-top: 1rem;
+  }
+  #right > #location {
+    visibility: hidden;
   }
   #right {
+    width: 100vw;
+    display: flex;
+    justify-content: right;
+  }
+  #left {
+    display: inline-block;
+    text-align: center;
+  }
+  #right > #sign {
+    margin-left: 0;
+    margin-right: 1rem;
+  }
+  #search {
+    justify-content: right;
+    max-width: 60%;
+    border: none;
+  }
+
+  #first {
+    display: flex;
+    flex-direction: column;
+    margin-right: 2rem;
+  }
+  #second {
     display: flex;
     flex-direction: column;
   }
-  #search {
-    flex-direction: column;
+  #navigation {
+    justify-content: center;
   }
-  #search > button {
-    margin-top: 1rem;
-  }
+
   /* .movie {
     flex-direction: column;
     gap: 0.5rem;
   } */
   .card > .img {
-    height: 500px;
+    height: 400px;
   }
 }
